@@ -31,22 +31,8 @@ uninstall-local:
 dist-html:
 	$(MAKE) -C doc dist-html
 
-
-snapshot: snapshot-src snapshot-html
-
-snapshot-src:
+snapshot:
 	$(MAKE) dist distdir=@PACKAGE_TARNAME@-`date +"%Y%m%d"`
 
 snapshot-html:
 	$(MAKE) -C doc dist-html html_tarname=@PACKAGE_TARNAME@-html-doc-`date +"%Y%m%d"`
-
-
-upload: upload-src upload-html
-
-upload-src: dist
-	@UPLOAD_COMMAND@ @PACKAGE_TARNAME@-@VERSION@.tar.gz \
-		@PACKAGE_TARNAME@-@VERSION@.tar.bz2
-
-upload-html: dist-html
-	@UPLOAD_COMMAND@ @PACKAGE_TARNAME@-html-doc-@VERSION@.tar.gz \
-		@PACKAGE_TARNAME@-html-doc-@VERSION@.tar.bz2
