@@ -32,10 +32,6 @@ GENERIC_LIBRARY_VERSION="6:0:0"
 #                    or changed
 AC_SUBST(GENERIC_LIBRARY_VERSION)
 
-# Upload command for SourceForge
-UPLOAD_COMMAND="ncftpput -v upload.sourceforge.net /incoming"
-AC_SUBST(UPLOAD_COMMAND)
-
 # Check for host and disable building a shared library in Windows
 AC_CANONICAL_HOST
 case $host in
