@@ -1,5 +1,7 @@
 2007-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* configure.ac, Makefile.am: "upload" target removed
+
 	* doc/doxygen_html.cfg.in, itpp/comm/ldpc.cpp, itpp/comm/llr.h,
 	itpp/comm/modulator.h, itpp/comm/modulator_nd.h,
 	itpp/optim/newton_search.h: Fixed Doxygen warnings by adding or
